--- a/psico-artaza-web/src/components/FloatingWhatsAppButton.astro
+++ b/psico-artaza-web/src/components/FloatingWhatsAppButton.astro
@@ -1,13 +1,14 @@
 ---
-const whatsappNumber = "+549 381 511 7639"; // Reemplaza con el número de WhatsApp del profesional
+const whatsappNumber = "5493815117639"; // Reemplaza con el número de WhatsApp del profesional
 const whatsappMessage = "Hola, quiero más información sobre sus servicios"; // Mensaje predeterminado
 ---
 
-<a href={`https://wa.me/${whatsappNumber}?text=${encodeURIComponent(whatsappMessage)}`} target="_blank" class="fixed bottom-4 right-4 z-50 flex items-center justify-center w-12 h-12 bg-green-500 rounded-full shadow-lg transition-transform transform hover:scale-110">
-  <svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24" fill="currentColor" class="w-6 h-6">
+<a href={`https://wa.me/${whatsappNumber}?text=${encodeURIComponent(whatsappMessage)}`} target="_blank" class="fixed bottom-4 right-4 z-50 flex items-center justify-center w-16 h-16 bg-green-500 rounded-full shadow-lg transition-transform transform hover:scale-110 group">
+  <svg xmlns="http://www.w3.org/2000/svg" width="32" height="32" viewBox="0 0 24 24" fill="currentColor" class="w-8 h-8">
     <path stroke="none" d="M0 0h24v24H0z" fill="none"/>
     <path d="M18.497 4.409a10 10 0 0 1 -10.36 16.828l-.223 -.098l-4.759 .849l-.11 .011a1 1 0 0 1 -.11 0l-.102 -.013l-.108 -.024l-.105 -.037l-.099 -.047l-.093 -.058l-.014 -.011l-.012 -.007l-.086 -.073l-.077 -.08l-.067 -.088l-.056 -.094l-.034 -.07l-.04 -.108l-.028 -.128l-.012 -.102a1 1 0 0 1 0 -.125l.012 -.1l.024 -.11l.045 -.122l1.433 -3.304l-.009 -.014a10 10 0 0 1 1.549 -12.454l.215 -.203a10 10 0 0 1 13.226 -.217m-8.997 3.09a1.5 1.5 0 0 0 -1.5 1.5v1a6 6 0 0 0 6 6h1a1.5 1.5 0 0 0 0 -3h-1l-.144 .007a1.5 1.5 0 0 0 -1.128 .697l-.042 .074l-.022 -.007a4.01 4.01 0 0 1 -2.435 -2.435l-.008 -.023l.075 -.041a1.5 1.5 0 0 0 .704 -1.272v-1a1.5 1.5 0 0 0 -1.5 -1.5"/>
   </svg>
+  <div class="absolute right-20 hidden w-40 p-2 text-center text-white bg-green-500 rounded-md shadow-lg group-hover:block">
+    <p class="text-sm font-medium leading-snug">Contáctame<br>por Whatsapp</p>
+  </div>
 </a>
-
-
