--- a/psico-artaza-web/src/components/Form.astro
+++ b/psico-artaza-web/src/components/Form.astro
@@ -1,48 +1,59 @@
-<div class="isolate bg-white px-6 py-24 sm:py-32 lg:px-8">
-    <div class="absolute inset-x-0 top-[-10rem] -z-10 transform-gpu overflow-hidden blur-3xl sm:top-[-20rem]" aria-hidden="true">
-      <div class="relative left-1/2 -z-10 aspect-[1155/678] w-[36.125rem] max-w-none -translate-x-1/2 rotate-[30deg] bg-gradient-to-tr from-[#ff80b5] to-[#9089fc] opacity-30 sm:left-[calc(50%-40rem)] sm:w-[72.1875rem]" style="clip-path: polygon(74.1% 44.1%, 100% 61.6%, 97.5% 26.9%, 85.5% 0.1%, 80.7% 2%, 72.5% 32.5%, 60.2% 62.4%, 52.4% 68.1%, 47.5% 58.3%, 45.2% 34.5%, 27.5% 76.7%, 0.1% 64.9%, 17.9% 100%, 27.6% 76.8%, 76.1% 97.7%, 74.1% 44.1%)"></div>
-    </div>
-    <div class="mx-auto max-w-2xl text-center">
-      <h2 class="text-4xl font-semibold tracking-tight text-gray-900 sm:text-5xl">Contacto</h2>
-      <p class="mt-2 text-lg text-gray-600">Ponte en contacto con nosotros para obtener más información sobre nuestros servicios.</p>
-    </div>
-    <form action="#" method="POST" class="mx-auto mt-16 max-w-xl sm:mt-20">
-      <div class="grid grid-cols-1 gap-x-8 gap-y-6 sm:grid-cols-2">
-        <div>
-          <label for="nombre" class="block text-sm font-semibold text-gray-900">Nombre</label>
-          <div class="mt-2.5">
-            <input type="text" name="nombre" id="nombre" autocomplete="given-name" class="block w-full rounded-md bg-white px-3.5 py-2 text-base text-gray-900 outline outline-1 -outline-offset-1 outline-gray-300 placeholder:text-gray-400 focus:outline focus:outline-2 focus:-outline-offset-2 focus:outline-indigo-600">
-          </div>
-        </div>
-        <div>
-          <label for="apellido" class="block text-sm font-semibold text-gray-900">Apellido</label>
-          <div class="mt-2.5">
-            <input type="text" name="apellido" id="apellido" autocomplete="family-name" class="block w-full rounded-md bg-white px-3.5 py-2 text-base text-gray-900 outline outline-1 -outline-offset-1 outline-gray-300 placeholder:text-gray-400 focus:outline focus:outline-2 focus:-outline-offset-2 focus:outline-indigo-600">
-          </div>
-        </div>
-        <div class="sm:col-span-2">
-          <label for="email" class="block text-sm font-semibold text-gray-900">Correo Electrónico</label>
-          <div class="mt-2.5">
-            <input type="email" name="email" id="email" autocomplete="email" class="block w-full rounded-md bg-white px-3.5 py-2 text-base text-gray-900 outline outline-1 -outline-offset-1 outline-gray-300 placeholder:text-gray-400 focus:outline focus:outline-2 focus:-outline-offset-2 focus:outline-indigo-600">
-          </div>
-        </div>
-        <div class="sm:col-span-2">
-          <label for="telefono" class="block text-sm font-semibold text-gray-900">Número de Teléfono</label>
-          <div class="mt-2.5">
-            <input type="text" name="telefono" id="telefono" class="block w-full rounded-md bg-white px-3.5 py-2 text-base text-gray-900 outline outline-1 -outline-offset-1 outline-gray-300 placeholder:text-gray-400 focus:outline focus:outline-2 focus:-outline-offset-2 focus:outline-indigo-600" placeholder="381-555-5555">
-          </div>
-        </div>
-        <div class="sm:col-span-2">
-          <label for="mensaje" class="block text-sm font-semibold text-gray-900">Mensaje</label>
-          <div class="mt-2.5">
-            <textarea name="mensaje" id="mensaje" rows="4" class="block w-full rounded-md bg-white px-3.5 py-2 text-base text-gray-900 outline outline-1 -outline-offset-1 outline-gray-300 placeholder:text-gray-400 focus:outline focus:outline-2 focus:-outline-offset-2 focus:outline-indigo-600"></textarea>
-          </div>
+<!-- Bloque de formulario de contacto con el mismo fondo que la sección -->
+<div class="bg-gray-100 relative isolate px-6 pt-6 pb-16 lg:pt-10">
+  <div class="absolute inset-x-0 -top-40 -z-10 transform-gpu overflow-hidden blur-3xl sm:-top-80" aria-hidden="true">
+    <div class="relative left-[calc(50%-11rem)] aspect-[1155/678] w-[36.125rem] -translate-x-1/2 rotate-[30deg] bg-gradient-to-tr from-[#3AB795] to-[#FFCF56] opacity-30 sm:left-[calc(50%-30rem)] sm:w-[72.1875rem]" style="clip-path: polygon(74.1% 44.1%, 100% 61.6%, 97.5% 26.9%, 85.5% 0.1%, 80.7% 2%, 72.5% 32.5%, 60.2% 62.4%, 52.4% 68.1%, 47.5% 58.3%, 45.2% 34.5%, 27.5% 76.7%, 0.1% 64.9%, 17.9% 100%, 27.6% 76.8%, 76.1% 97.7%, 74.1% 44.1%)"></div>
+  </div>
+
+  <div class="mx-auto max-w-2xl text-center py-4 sm:py-6 lg:py-8">
+    <h2 class="text-3xl font-semibold tracking-tight text-gray-900 sm:text-4xl">Contáctame</h2>
+    <p class="mt-2 text-lg text-gray-600">Envíame un mensaje para que pueda resolver tus inquietudes.</p>
+  </div>
+  <form action="https://formspree.io/f/xnnnwqdj" method="POST" class="mx-auto mt-4 max-w-xl sm:mt-6">
+    <div class="grid grid-cols-1 gap-x-8 gap-y-6 sm:grid-cols-2">
+      <div>
+        <label for="nombre" class="block text-sm font-semibold text-gray-900">Nombre</label>
+        <div class="mt-2.5">
+          <input type="text" name="nombre" id="nombre" autocomplete="given-name" class="block w-full rounded-md bg-white px-3.5 py-2 text-base text-gray-900 outline outline-1 -outline-offset-1 outline-gray-300 placeholder:text-gray-400 focus:outline focus:outline-2 focus:-outline-offset-2 focus:outline-[#3AB795]">
         </div>
       </div>
-      <div class="mt-10">
-        <button type="submit" class="block w-full rounded-md bg-indigo-600 px-3.5 py-2.5 text-center text-sm font-semibold text-white shadow-sm hover:bg-indigo-500 focus-visible:outline focus-visible:outline-2 focus-visible:outline-offset-2 focus-visible:outline-indigo-600">Enviar</button>
+      <div>
+        <label for="apellido" class="block text-sm font-semibold text-gray-900">Apellido</label>
+        <div class="mt-2.5">
+          <input type="text" name="apellido" id="apellido" autocomplete="family-name" class="block w-full rounded-md bg-white px-3.5 py-2 text-base text-gray-900 outline outline-1 -outline-offset-1 outline-gray-300 placeholder:text-gray-400 focus:outline focus:outline-2 focus:-outline-offset-2 focus:outline-[#3AB795]">
+        </div>
       </div>
-    </form>
+      <div class="sm:col-span-2">
+        <label for="email" class="block text-sm font-semibold text-gray-900">Correo Electrónico</label>
+        <div class="mt-2.5">
+          <input type="email" name="email" id="email" autocomplete="email" class="block w-full rounded-md bg-white px-3.5 py-2 text-base text-gray-900 outline outline-1 -outline-offset-1 outline-gray-300 placeholder:text-gray-400 focus:outline focus:outline-2 focus:-outline-offset-2 focus:outline-[#3AB795]">
+        </div>
+      </div>
+      <div class="sm:col-span-2">
+        <label for="telefono" class="block text-sm font-semibold text-gray-900">Número de Teléfono</label>
+        <div class="mt-2.5">
+          <input type="text" name="telefono" id="telefono" class="block w-full rounded-md bg-white px-3.5 py-2 text-base text-gray-900 outline outline-1 -outline-offset-1 outline-gray-300 placeholder:text-gray-400 focus:outline focus:outline-2 focus:-outline-offset-2 focus:outline-[#3AB795]" placeholder="381-555-5555">
+        </div>
+      </div>
+      <div class="sm:col-span-2">
+        <label for="mensaje" class="block text-sm font-semibold text-gray-900">Mensaje</label>
+        <div class="mt-2.5">
+          <textarea name="mensaje" id="mensaje" rows="4" class="block w-full rounded-md bg-white px-3.5 py-2 text-base text-gray-900 outline outline-1 -outline-offset-1 outline-gray-300 placeholder:text-gray-400 focus:outline focus:outline-2 focus:-outline-offset-2 focus:outline-[#3AB795]"></textarea>
+        </div>
+      </div>
+    </div>
+    <div class="mt-8">
+      <button type="submit" class="block w-full rounded-md bg-[#3AB795] px-3.5 py-2.5 text-center text-sm font-semibold text-white shadow-sm hover:bg-[#4c7852] focus-visible:outline focus-visible:outline-2 focus-visible:outline-offset-2 focus-visible:outline-green-600">Enviar mensaje</button>
+    </div>
+  </form>
+
+  <div class="absolute inset-x-0 top-[calc(100%-13rem)] -z-10 transform-gpu overflow-hidden blur-3xl sm:top-[calc(100%-30rem)]" aria-hidden="true">
+    <div class="relative left-[calc(50%+3rem)] aspect-[1155/678] w-[36.125rem] -translate-x-1/2 bg-gradient-to-tr from-[#3AB795] to-[#FFCF56] opacity-30 sm:left-[calc(50%+36rem)] sm:w-[72.1875rem]" style="clip-path: polygon(74.1% 44.1%, 100% 61.6%, 97.5% 26.9%, 85.5% 0.1%, 80.7% 2%, 72.5% 32.5%, 60.2% 62.4%, 52.4% 68.1%, 47.5% 58.3%, 45.2% 34.5%, 27.5% 76.7%, 0.1% 64.9%, 17.9% 100%, 27.6% 76.8%, 76.1% 97.7%, 74.1% 44.1%)"></div>
+  </div>
 </div>
+
+
+
+
+
   
   
