--- a/psico-artaza-web/src/components/Hero.astro
+++ b/psico-artaza-web/src/components/Hero.astro
@@ -1,26 +1,58 @@
-<div class="bg-white">
-    <header class="absolute inset-x-0 top-0 z-50">
-      <!-- Aquí podrías agregar tu navbar -->
-    </header>
-  
-    <div class="relative isolate px-6 pt-6 lg:pt-10">
-      <div class="absolute inset-x-0 -top-40 -z-10 transform-gpu overflow-hidden blur-3xl sm:-top-80" aria-hidden="true">
-        <div class="relative left-[calc(50%-11rem)] aspect-[1155/678] w-[36.125rem] -translate-x-1/2 rotate-[30deg] bg-gradient-to-tr from-[#ff80b5] to-[#9089fc] opacity-30 sm:left-[calc(50%-30rem)] sm:w-[72.1875rem]" style="clip-path: polygon(74.1% 44.1%, 100% 61.6%, 97.5% 26.9%, 85.5% 0.1%, 80.7% 2%, 72.5% 32.5%, 60.2% 62.4%, 52.4% 68.1%, 47.5% 58.3%, 45.2% 34.5%, 27.5% 76.7%, 0.1% 64.9%, 17.9% 100%, 27.6% 76.8%, 76.1% 97.7%, 74.1% 44.1%)"></div>
+<div class="bg-gray-100">
+  <header class="absolute inset-x-0 top-0 z-50">
+
+  </header>
+
+  <div class="relative isolate px-6 pt-6 lg:pt-10">
+    <div
+      class="absolute inset-x-0 -top-40 -z-10 transform-gpu overflow-hidden blur-3xl sm:-top-80"
+      aria-hidden="true"
+    >
+      <div
+        class="relative left-[calc(50%-11rem)] aspect-[1155/678] w-[36.125rem] -translate-x-1/2 rotate-[30deg] bg-gradient-to-tr from-[#3AB795] to-[#FFCF56] opacity-30 sm:left-[calc(50%-30rem)] sm:w-[72.1875rem]"
+        style="clip-path: polygon(74.1% 44.1%, 100% 61.6%, 97.5% 26.9%, 85.5% 0.1%, 80.7% 2%, 72.5% 32.5%, 60.2% 62.4%, 52.4% 68.1%, 47.5% 58.3%, 45.2% 34.5%, 27.5% 76.7%, 0.1% 64.9%, 17.9% 100%, 27.6% 76.8%, 76.1% 97.7%, 74.1% 44.1%)"
+      >
       </div>
-      <div class="mx-auto max-w-2xl py-16 sm:py-24 lg:py-32">
-        <div class="text-center">
-          <h1 class="text-5xl font-semibold tracking-tight text-gray-900 sm:text-7xl">Bienestar emocional a tu alcance</h1>
-          <p class="mt-8 text-lg font-medium text-gray-500 sm:text-xl">Ofrecemos servicios de atención psicológica para todas las etapas de la vida. Nuestro objetivo es ayudarte a alcanzar un bienestar integral.</p>
-          <div class="mt-10 flex items-center justify-center gap-x-6">
-            <a href="#" class="rounded-md bg-indigo-600 px-3.5 py-2.5 text-sm font-semibold text-white shadow-sm hover:bg-indigo-500 focus-visible:outline focus-visible:outline-2 focus-visible:outline-offset-2 focus-visible:outline-indigo-600">Agendar cita</a>
-            <a href="#" class="text-sm font-semibold text-gray-900">Conoce más <span aria-hidden="true">→</span></a>
-          </div>
+    </div>
+    <div class="mx-auto max-w-2xl py-16 sm:py-24 lg:py-32">
+      <div class="text-center">
+        <h1 class="text-5xl font-semibold tracking-tight text-[#2c4531] sm:text-7xl">
+          Bienestar emocional a tu alcance
+        </h1>
+        <p class="mt-8 text-lg font-medium text-gray-500 sm:text-xl">
+          Ofrezco servicios de atención psicológica para todas las etapas de
+          la vida. Mi objetivo es ayudarte a alcanzar el bienestar
+          integral.
+        </p>
+        <div class="mt-10 flex items-center justify-center gap-x-6">
+          <a
+            href="#servicios"
+            class="rounded-md bg-white px-5 py-3 text-md font-semibold text-gray-900 shadow-sm hover:bg-[#3AB795] hover:text-white focus-visible:outline focus-visible:outline-2 focus-visible:outline-offset-2 focus-visible:outline-green-600"
+          >Conoce más <span aria-hidden="true">→</span></a>
+          <a
+            href="https://wa.me/5493815117639?text=Hola%2C%20quiero%20m%C3%A1s%20informaci%C3%B3n%20sobre%20sus%20servicios"
+            target="_blank"
+            class="rounded-md bg-[#3AB795] px-5 py-3 text-md font-semibold text-white shadow-sm hover:bg-[#4c7852] focus-visible:outline focus-visible:outline-2 focus-visible:outline-offset-2 focus-visible:outline-green-600 flex items-center justify-center gap-x-2"
+          >
+            Agendemos una cita
+            <svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round" class="icon icon-tabler icons-tabler-outline icon-tabler-calendar-event"><path stroke="none" d="M0 0h24v24H0z" fill="none"/><path d="M4 5m0 2a2 2 0 0 1 2 -2h12a2 2 0 0 1 2 2v12a2 2 0 0 1 -2 2h-12a2 2 0 0 1 -2 -2z" /><path d="M16 3l0 4" /><path d="M8 3l0 4" /><path d="M4 11l16 0" /><path d="M8 15h2v2h-2z" /></svg>
+          </a>
         </div>
       </div>
-      <div class="absolute inset-x-0 top-[calc(100%-13rem)] -z-10 transform-gpu overflow-hidden blur-3xl sm:top-[calc(100%-30rem)]" aria-hidden="true">
-        <div class="relative left-[calc(50%+3rem)] aspect-[1155/678] w-[36.125rem] -translate-x-1/2 bg-gradient-to-tr from-[#ff80b5] to-[#9089fc] opacity-30 sm:left-[calc(50%+36rem)] sm:w-[72.1875rem]" style="clip-path: polygon(74.1% 44.1%, 100% 61.6%, 97.5% 26.9%, 85.5% 0.1%, 80.7% 2%, 72.5% 32.5%, 60.2% 62.4%, 52.4% 68.1%, 47.5% 58.3%, 45.2% 34.5%, 27.5% 76.7%, 0.1% 64.9%, 17.9% 100%, 27.6% 76.8%, 76.1% 97.7%, 74.1% 44.1%)"></div>
+    </div>
+    <div
+      class="absolute inset-x-0 top-[calc(100%-13rem)] -z-10 transform-gpu overflow-hidden blur-3xl sm:top-[calc(100%-30rem)]"
+      aria-hidden="true"
+    >
+      <div
+        class="relative left-[calc(50%+3rem)] aspect-[1155/678] w-[36.125rem] -translate-x-1/2 bg-gradient-to-tr from-[#3AB795] to-[#FFCF56] opacity-30 sm:left-[calc(50%+36rem)] sm:w-[72.1875rem]"
+        style="clip-path: polygon(74.1% 44.1%, 100% 61.6%, 97.5% 26.9%, 85.5% 0.1%, 80.7% 2%, 72.5% 32.5%, 60.2% 62.4%, 52.4% 68.1%, 47.5% 58.3%, 45.2% 34.5%, 27.5% 76.7%, 0.1% 64.9%, 17.9% 100%, 27.6% 76.8%, 76.1% 97.7%, 74.1% 44.1%)"
+      >
       </div>
     </div>
   </div>
-  
-  
+</div>
+
+
+
+
